k8s/platform-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: orcacloud
  namespace: orcacloud
  labels:
    app: orcacloud
spec:
  selector:
    app: orcacloud
  ports:
    - protocol: TCP
      port: 8000
      targetPort: 8000
  type: ClusterIP
